--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-multi-carousel": "^2.8.5"
+    "react-multi-carousel": "^2.8.5",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
