--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -18,6 +19,7 @@
     "react-use": "^17.5.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
